# sti

./: README.md  SessionTypeInference.cabal
src/: AlgorithmD.hs  AlgorithmF.hs  AlgorithmR.hs  AlgorithmST.hs  AlgorithmW.hs  Lambda.hs  Main.hs  Parser.hs  PrettyPrinting.hs  Syntax.hs  Types.hs
src/PP/: Latex.hs  Literal.hs
src/Types/: CustomSimplifications.hs  TAE.hs  Transformations.hs
test/: db-example.ml  swap-deleg.ml  swap-simple.ml
